@@ -1,3 +1,4 @@
+* Add a relate from product to its moves
 * Factorize the cost price of move for cost computation
 * Fill grouping values when assigning move
 * Use a single assign wizard for all shipments
